--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,27 +1,30 @@
+/* --- General --- */
 * {
 	font-size:12px;
+	font-weight: bold;
 	font-family: Hack Nerd Font;
 	transition: all 0.5s ease;
 }
 window#waybar{
 	all: unset;
 }
+
+#mpris, #clock, #workspaces, #memory, #battery, #window {
+	color: @foreground;
+	padding: 2px 10px;
+	border-radius: 2px;
+	border: solid 2px alpha(@foreground, 0.3);
+}
+
+/* --- Positions --- */
 .modules-left {
-	margin: 5px 0px 2px 10px;
+	margin: 5px 0px 2px 0px;
 }
 .modules-center {
-	margin: 5px 0px 2px 0px;
+	margin: 5px 0px 2px 10px;
 }
 .modules-right {
 	margin: 5px 10px 2px 0px;
-}
-tooltip {
-	background: @background;
-	border: 1px solid alpha(@color1, 0.8);
-	color: @foreground;
-}
-#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover,#pulseaudio:hover,#hyprland-language:hover, #mpris:hover, #custom-control-center:hover, #custom-pacman:hover, #tray:hover label {
-	color: @color2;
 }
 
 .modules-right .module, .modules-left .module, .modules-center .module {
@@ -29,24 +32,7 @@ tooltip {
 	color: @foreground;
 }
 
-#mpris, #clock, #workspaces, #tray, #perf, #configs, #custom-control-center, #custom-pacman, #privacy {
-	color: @foreground;
-	padding: 5px 15px;
-	margin: 0px 2px;
-	border-radius: 10px;
-	background: alpha(@background, .8);
-	box-shadow: 0px 0px 2px rgba(0, 0, 0, .85);
-	border: solid 1px alpha(@foreground, 0.3);
-}
-
-#privacy {
-	color: @foreground;
-}
-
-#tray, #perf, #configs {
-	padding: 5px;
-}
-
+/* --- Workspaces --- */
 #workspaces {
 	margin-left: 0px;
 }
@@ -58,37 +44,27 @@ tooltip {
 	all: unset;
 	padding: 0px 10px;
 }
-#workspaces button label {
-	color: alpha(@foreground, 0.5);
-	font-weight: 600;
+
+#battery {
+	color: lightskyblue;
 }
-#workspaces button:hover label {
-	color: alpha(@foreground, 0.85);
+#battery.warning {
+	color: orange;
 }
-#workspaces button.active label {
-	color: alpha(@foreground, 1.0);
-	font-weight: 900;
+#battery.critical {
+	color: red;
 }
 
-#tray #tray { /* Inner tray element. We don't want to style this.*/
-	background-color: transparent;
-	padding: 0px 5px 0px 0px;
-	box-shadow: none;
-	border: none;
+/* --- Memory --- */
+#memory {
+	color: aquamarine;
 }
-#tray menu {
-	background-color: alpha(@background, 0.9);
-	border: solid 1px alpha(@color1, 0.8);
+#memory.warning {
+	color: orange;
+	font-weight: bold;
 }
-#tray menu separator {
-	background-color: alpha(@color1, 0.8);
-}
-#tray menu label {
-	color: @foreground;
-}
-#tray menu menuitem:hover {
-	background-color: @foreground;
-}
-#tray menu menuitem:hover label {
-	color: @background;
+
+#memory.critical {
+	color: red;
+	font-weight: bold;
 }
