--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 /* --- General --- */
 * {
-	font-size:12px;
-	font-weight: bold;
+	font-size:16px;
+	font-weight: normal;
 	font-family: Hack Nerd Font;
 	transition: all 0.5s ease;
 }
