Added hyprlock, switched caps and esc, and made moving windows between workspaces more intuitive

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
 * {
 	font-size:16px;
 	font-weight: normal;
-	font-family: Hack Nerd Font;
+	font-family: JetBrainsMono Extrabold;
 	transition: all 0.5s ease;
 }
 window#waybar{
