--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
 * {
 	font-size:15px;
 	font-weight: normal;
-	font-family: JetBrainsMono Extrabold;
+	font-family: Hack Nerd Font;
 	transition: all 0.5s ease;
 }
 window#waybar{
